Removed pthread from CMake rules for xmm core lib and python bindings (fixes MSVC linker error due to missing phthread.lib)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/models/hmm)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/models/kmeans)
 
 set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})
-add_definitions(-DUSE_PTHREAD)
+# add_definitions(-DUSE_PTHREAD)
 
 file(
     GLOB_RECURSE
